--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,7 +1,7 @@
 <div class="col">
   <%= render 'layouts/header_big' %>
   <div class="offset-2 col-8 mx-auto">
-    <div class="card border-secondary p-4 justify-content-center bg-light">
+    <div class="card border-secondary p-4 justify-content-center bg-light above">
     <%=render 'article_list'%>
     </div>
   </div>
