--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,10 @@
 <body>
 <div class="row d-flex">
   <%= render 'layouts/navbar_closed' %>
+  <div class="col">
   <%= yield %>
-      <%=render 'layouts/footer'%>
+  <%=render 'layouts/footer'%>
+  </div>
 </div>
 
 <style>html {
