--- a/app/views/articles/_article_list.html.erb
+++ b/app/views/articles/_article_list.html.erb
@@ -14,9 +14,9 @@
         <div class="card border-light col-3 bg-light mt-3 ">
             <div class="d-flex justify-content-center ">
                 <div row="">
-                    <span class="badge rounded-pill bg-success" data-bs-toggle="tooltip" data-bs-placement="top" title="Approved"><span class="iconify" data-icon="mdi:check-bold" style="color: white;" data-width="20"></span><span class="badge rounded-pill bg-primary">1</span></span>
-                    <span class="badge rounded-pill bg-warning" data-bs-toggle="tooltip" data-bs-placement="top" title="Need Review"><span class="iconify" data-icon="jam:write-f" style="color: white;" data-width="20" data-height="20"></span><span class="badge rounded-pill bg-primary">1</span></span>                             
-                    <span class="badge rounded-pill bg-danger" data-bs-toggle="tooltip" data-bs-placement="top" title="Not Approved"><span class="iconify" data-icon="emojione-monotone:cross-mark" style="color: white;" data-width="20" data-height="20"></span><span class="badge rounded-pill bg-primary">1</span></span>              
+                    <span class="badge rounded-pill bg-success" data-bs-toggle="tooltip" data-bs-placement="top" title="Approved"><span class="iconify" data-icon="mdi:check-bold" style="color: white;" data-width="20"></span><span class="badge rounded-pill bg-primary"><%=tag_count(article)[:approved]%></span></span>
+                    <span class="badge rounded-pill bg-warning" data-bs-toggle="tooltip" data-bs-placement="top" title="Need Review"><span class="iconify" data-icon="jam:write-f" style="color: white;" data-width="20" data-height="20"></span><span class="badge rounded-pill bg-primary"><%=tag_count(article)[:need_rewiew]%></span></span>                             
+                    <span class="badge rounded-pill bg-danger" data-bs-toggle="tooltip" data-bs-placement="top" title="Not Approved"><span class="iconify" data-icon="emojione-monotone:cross-mark" style="color: white;" data-width="20" data-height="20"></span><span class="badge rounded-pill bg-primary"><%=tag_count(article)[:not_approved]%></span></span>              
                 </div>
             </div>           
                 <div class="d-flex justify-content-center mt-4">                   
