--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,20 +6,38 @@
     <div class="offset-2 col-8 mx-auto">
       <div class="card border-secondary p-4 justify-content-center bg-light above-small ">
 
-        <div class="card border-light col-3 bg-light">
-          <%= @article.user.first_name%>
-          <%= @article.user.last_name%>
-        </div> 
+       <div class="row align-items-start">
+         
 
-        <div class="card border-light col-3">
-          <div class="d-flex justify-content-around bg-light ">
-            <span class="badge rounded-pill bg-success" data-bs-toggle="tooltip" data-bs-placement="top" title="Approved"><span class="iconify" data-icon="mdi:check-bold" style="color: white;" data-width="25" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:approved]%></span></span>
-            <span class="badge rounded-pill bg-warning" data-bs-toggle="tooltip" data-bs-placement="top" title="Need Review"><span class="iconify" data-icon="jam:write-f" style="color: white;" data-width="25" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:need_review]%></span></span>
-            <span class="badge rounded-pill bg-danger" data-bs-toggle="tooltip" data-bs-placement="top" title="Not Approved"><span class="iconify" data-icon="emojione-monotone:cross-mark" style="color: white;" data-width="30" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:not_approved]%></span></span>
+            <div class="card border-light col-3 bg-light">
+
+              <img
+              class="ms-md-5 ms-0"
+              style="width: 5em"
+              src="<%= asset_path('profil.png') %>"
+              alt="profil"
+              />
+              <div class="ms-md-5 ms-0">
+                <h5><em><%= @article.user.first_name%>
+                <%= @article.user.last_name%></em></h5>
+              </div>
+            </div>
+       
+          
+          <div class="col d-flex"> 
+
+            <div class="card border-light col-3">
+              <div class="d-flex justify-content-around bg-light ">
+                <span class="badge rounded-pill bg-success" data-bs-toggle="tooltip" data-bs-placement="top" title="Approved"><span class="iconify" data-icon="mdi:check-bold" style="color: white;" data-width="25" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:approved]%></span></span>
+                <span class="badge rounded-pill bg-warning" data-bs-toggle="tooltip" data-bs-placement="top" title="Need Review"><span class="iconify" data-icon="jam:write-f" style="color: white;" data-width="25" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:need_review]%></span></span>
+                <span class="badge rounded-pill bg-danger" data-bs-toggle="tooltip" data-bs-placement="top" title="Not Approved"><span class="iconify" data-icon="emojione-monotone:cross-mark" style="color: white;" data-width="30" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:not_approved]%></span></span>
+              </div>
+            </div>
           </div>
         </div>
 
         <div class="card border-light bg-light ">
+          <p><br></p>
           <h3><center><%= @article.title%><center><h3>
         </div> 
 
