--- a/app/views/layouts/_user_dropdown_opened.html.erb
+++ b/app/views/layouts/_user_dropdown_opened.html.erb
@@ -34,7 +34,7 @@
       >
         <% if user_signed_in? %>
           <li><a class="dropdown-item" href="<%= edit_user_registration_path(current_user.id) %>">Profil</a></li>
-          <li><%= link_to 'Me Déconnecter', destroy_user_session_path(current_user.id), class: 'dropdown-item', method: 'delete' %></li>
+          <li><%= link_to 'Me Déconnecter', destroy_user_session_path, class: 'dropdown-item', method: 'delete' %></li>
         <% else %>
           <li><a class="dropdown-item" href="<%= new_user_session_path %>">Me Connecter</a></li>
           <li><a class="dropdown-item" href="<%= new_user_registration_path %>">M'Inscrire</a></li>
