--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,13 +8,12 @@
         
 
           <div class="card border-light col-3 bg-light">
+          <% if @article.user.avatar.attached? %>
+            <%= image_tag(@article.user.avatar, class: 'rounded-circle ms-md-5 ms-0', style: "width: 5em; height: 5em") %>
+          <% else %>
+            <%= image_tag(asset_path('default_avatar.png'), class: 'rounded-circle ms-md-5 ms-0', style: "width: 5em; height: 5em") %>
+          <% end %>
 
-            <img
-            class="ms-md-5 ms-0"
-            style="width: 5em"
-            src="<%= asset_path('profil.png') %>"
-            alt="profil"
-            />
             <div class="ms-md-5 ms-0">
               <h5><em><%= @article.user.first_name%>
               <%= @article.user.last_name%></em></h5>
@@ -25,9 +24,9 @@
         <div class="col d-flex justify-content-end me-4"> 
           <div class="card border-light  col-3">
             <div class="d-flex justify-content-around bg-light ">
-              <span class="badge rounded-pill bg-success" data-bs-toggle="tooltip" data-bs-placement="top" title="Approved"><span class="iconify" data-icon="mdi:check-bold" style="color: white;" data-width="25" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:approved]%></span></span>
-              <span class="badge rounded-pill bg-warning" data-bs-toggle="tooltip" data-bs-placement="top" title="Need Review"><span class="iconify" data-icon="jam:write-f" style="color: white;" data-width="25" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:need_review]%></span></span>
-              <span class="badge rounded-pill bg-danger" data-bs-toggle="tooltip" data-bs-placement="top" title="Not Approved"><span class="iconify" data-icon="emojione-monotone:cross-mark" style="color: white;" data-width="30" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:not_approved]%></span></span>
+              <a href="#"><span class="badge rounded-pill bg-success" data-bs-toggle="tooltip" data-bs-placement="top" title="Approved"><span class="iconify" data-icon="mdi:check-bold" style="color: white;" data-width="25" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:approved]%></span></span></a>
+              <a href="#"><span class="badge rounded-pill bg-warning" data-bs-toggle="tooltip" data-bs-placement="top" title="Need Review"><span class="iconify" data-icon="jam:write-f" style="color: white;" data-width="25" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:need_review]%></span></span></a>
+              <a href="#"><span class="badge rounded-pill bg-danger" data-bs-toggle="tooltip" data-bs-placement="top" title="Not Approved"><span class="iconify" data-icon="emojione-monotone:cross-mark" style="color: white;" data-width="30" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:not_approved]%></span></span></a>
             </div>
           </div>
         </div>
