--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -9,7 +9,7 @@
     <div id="paging" class="d-flex justify-content-end mt-4">
       <ul class="pagination">
         <li class="page-item disabled" id="btn-prev">
-          <%= link_to '<<', articles_path(page: @page - 1), class: 'page-link', remote: true %>
+          <%= link_to '<<', articles_path(page: 0), class: 'page-link', remote: true %>
         </li>
         <li class="page-item" id="btn-1">
           <%= link_to '1', articles_path(page: 1), class: 'page-link', remote: true %>
@@ -27,7 +27,7 @@
           <%= link_to '5', articles_path(page: 5), class: 'page-link', remote: true %>
         </li>
         <li class="page-item" id="btn-next">
-          <%= link_to '>>', articles_path(page: @page + 1), class: 'page-link', remote: true %>
+          <%= link_to '>>', articles_path(page: 2), class: 'page-link', remote: true %>
         </li>
       </ul>
     </div>
