--- a/app/views/articles/index.js.erb
+++ b/app/views/articles/index.js.erb
@@ -1,14 +1,11 @@
 function reload() {
-    let paging = document.querySelector('#paging')
-
-    document.querySelector("#card").remove();
-    document.querySelector('#above-card').insertAdjacentHTML("afterbegin", '<div id="card" class="card border-secondary p-4 justify-content-center bg-light above"></div>')
+    document.querySelector("#card").innerHTML = '';
     <% if @articles.nil? %>
     document.querySelector('#card').insertAdjacentHTML('afterbegin', "<%= j render 'no_more_articles' %>")
     <% else %>
     document.querySelector('#card').insertAdjacentHTML('afterbegin', "<%= j render 'article_list' %>")
     <% end %>
-    document.querySelector('#card').insertAdjacentHTML('beforeend', '<div id="paging" class="d-flex justify-content-end mt-4">')
+    document.querySelector('#card').insertAdjacentHTML('beforeend', '<div id="paging" class="d-flex justify-content-end mt-4"></div>')
     document.querySelector('#paging').insertAdjacentHTML('afterbegin', "<%= j render 'paging' %>")
 }
 
