--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,4 +1,4 @@
-<div id="flash" class="d-flex justify-content-center align-items-center w-100">
+<div id="flash" class="d-flex fixed-top justify-content-center align-items-center w-100">
   <% flash.each do |type, msg| %>
     <% if type == 'alert' %>
       <div class="alert alert-danger w-60 border-0">
