--- a/app/views/layouts/_footer_sticky.html.erb
+++ b/app/views/layouts/_footer_sticky.html.erb
@@ -1,4 +1,4 @@
-<section class="bg-light mt-5 pt-1" style="position: absolute;
+<section id='footer' class="bg-light mt-5 pt-1" style="position: absolute;
   bottom: 0; width: 100%;" >
   <div class="text-center text-md-start">
     <div class="row d-flex align-items-center text-center">
