--- a/app/views/articles/index.js.erb
+++ b/app/views/articles/index.js.erb
@@ -1,9 +1,12 @@
 function reload() {
     document.querySelector("#card").innerHTML = '';
+    document.querySelector('#footer').remove()
     <% if @articles.nil? %>
     document.querySelector('#card').insertAdjacentHTML('afterbegin', "<%= j render 'no_more_articles' %>")
+    document.querySelector('#above-card').insertAdjacentHTML('afterend', "<%= j render 'layouts/footer_sticky' %>")
     <% else %>
     document.querySelector('#card').insertAdjacentHTML('afterbegin', "<%= j render 'article_list' %>")
+    document.querySelector('#above-card').insertAdjacentHTML('afterend', "<%= j render 'layouts/footer' %>")
     <% end %>
     document.querySelector('#card').insertAdjacentHTML('beforeend', '<div id="paging" class="d-flex justify-content-end mt-4"></div>')
     document.querySelector('#paging').insertAdjacentHTML('afterbegin', "<%= j render 'paging' %>")
