--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,10 +1,20 @@
+<%= stylesheet_link_tag "article_new" %>
 <div class="col">
   <div class="offset-2 col-8 mx-auto">
+  
     <div class="card border-secondary p-4 text-center justify-content-center bg-light above-small ">
+         
+         <% if user_signed_in? && current_user.avatar.attached? %> 
+          <%= image_tag(current_user.avatar, class: 'rounded-circle', style: "width: 5em; height: 5em") %>
+        <% elsif user_signed_in? %>
+          <%= image_tag(asset_path('default_avatar.png'), class: 'rounded-circle', style: "width: 5em; height: 5em") %>
+        <% else %>
+          <%= image_tag(asset_path('default_avatar.png'), class: 'rounded-circle', style: "width: 5em; height: 5em") %>
+        <% end %>
+         
           <h3>Publier un article</h3>
           <%= form_tag url_for(action: 'create', method: "post", class: 'text-center form-group,form-control')do %>
-          <%= label_tag 'Titre' %>
-
+          <div class="card-header"><%= label_tag 'Titre' %></div>
           <%= text_field_tag 'title', nil, class:"form-control" %>
           <br>
           <%= label_tag 'Résumé' %>
