--- a/app/views/articles/_header_article_show.html.erb
+++ b/app/views/articles/_header_article_show.html.erb
@@ -18,9 +18,9 @@
         <%if user_signed_in?%>        
 
           <%if whith_tag(current_user,@article) == "Approved"%>
-            <a href="<%=article_tag_path(@article.id, @article.tags.find_by(user: current_user).id)%>" data-method="delete"><span class="badge badge-fake rounded-pill bg-success" data-bs-toggle="tooltip" data-bs-placement="top" title="Approved"><span class="iconify" data-icon="mdi:check-bold" style="color: #2c3e50;" data-width="25" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:approved]%></span></span> 
+            <a href="<%=article_tag_path(@article.id, @article.tags.find_by(user: current_user).id)%>" data-method="delete"><span class="badge badge-fake rounded-pill bg-success" data-bs-toggle="tooltip" data-bs-placement="top" title="Approved"><span class="iconify" data-icon="mdi:check-bold" style="color: #2c3e50;" data-width="25" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:approved]%></span></span></a>
           <%else%>
-            <a href="<%=article_tags_path(@article.id, :tag_name => "Approved")%>" data-method="post"><span class="badge badge-fake rounded-pill bg-success" data-bs-toggle="tooltip" data-bs-placement="top" title="Approved"><span class="iconify" data-icon="mdi:check-bold" style="color: white;" data-width="25" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:approved]%></span></span> 
+            <a href="<%=article_tags_path(@article.id, :tag_name => "Approved")%>" data-method="post"><span class="badge badge-fake rounded-pill bg-success" data-bs-toggle="tooltip" data-bs-placement="top" title="Approved"><span class="iconify" data-icon="mdi:check-bold" style="color: white;" data-width="25" data-height="25"></span><span class="badge rounded-pill bg-primary"><%=tag_count(@article)[:approved]%></span></span> </a>
           <%end%>                 
 
           <%if whith_tag(current_user,@article) == "Need Review"%>
