--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,19 +3,23 @@
     <div class="card border-secondary p-4 text-center justify-content-center bg-light above-small ">
           <h3>Votre profil</h3>
           
-          <%= form_tag url_for(action: 'update', method: "patch", class: 'text-center form-group,form-control')do %>
+          <%= form_tag user_path(@user.id), :method => :patch, class: 'text-center form-group,form-control' do %>
          
-          <%= label_tag 'Nom de famille' %>
-          <%= text_field_tag 'last_name', nil, class:"form-control" %>
-          <br>
+            <%= label_tag 'Nom de famille' %>
+            <%= text_field_tag 'last_name', nil, class:"form-control" %>
+            <br>
+            
+            <%= label_tag 'Prénom' %>
+            <%= text_field_tag 'first_name', nil, class:"form-control" %>
+            <br>
+            
+            <br>
+            <%= submit_tag "Enregistrer", class: "mt-3 btn btn-lg btn btn-success"  %>
+
+          <% end %>
+
+          <a href="<%= edit_user_registration_path(current_user.id) %>">Changer de Mot de Passe</a>
           
-          <%= label_tag 'Prénom' %>
-          <%= text_field_tag 'first_name', nil, class:"form-control" %>
-          <br>
-          
-          <br>
-          <%= submit_tag "Enregistrer", class: "mt-3 btn btn-lg btn btn-success"  %>
-        <% end %>
       </div>
     </div>
   </div>
@@ -25,4 +29,3 @@
 
 
 
-<%= edit_user_registration_path(current_user.id) %>
