--- a/app/views/static_pages/about_us.html.erb
+++ b/app/views/static_pages/about_us.html.erb
@@ -1,2 +1,14 @@
-<h1>StaticPages#aboutus</h1>
-<p>Find me in app/views/static_pages/aboutus.html.erb</p>
+<div%= stylesheet_link_tag "article_show" %>
+<div class="col">
+    <div class="offset-2 col-8 mx-auto">
+        <div class="card border-secondary p-4 justify-content-center bg-light above-small ">
+            <h3 class="text-center"><strong>À propos</strong></h3>
+            <div class="card border-light p-4 justify-content-center bg-light ">
+                <div class="card-header text-center">Le concept GAFFEX</div>
+                <div class="card-body text-center">
+                Le développement du GAFFEx est soutenu par l’association « Science Unchained ». Une équipe forte est leur travail dans les coulisses rendant la plate-forme librement disponible. Si vous avez le sentiment que vous pouvez également apporter vos compétences au sein de notre équipe pour améliorer la plateforme ou développer de nouveaux services, veuillez<a class="text-decoration-none" href="<%= contact_path %>"> nous contacter.</a>
+                </div>           
+            </div>
+        </div>
+    </div>
+</div>
