--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="col">
   <div class="offset-2 col-8 mx-auto">
     <div class="card border-secondary p-4 text-center justify-content-center bg-light above-small ">
-          <h3>Votre profil</h3>
+          <h3>Modifier votre profil</h3>
           
           <%= form_tag user_path(@user.id), :method => :patch, class: 'text-center form-group,form-control' do %>
          
@@ -12,13 +12,15 @@
             <%= label_tag 'Prénom' %>
             <%= text_field_tag 'first_name', nil, placeholder: @user.first_name, class:"form-control" %>
             <br>
+
+            <a href="<%= edit_user_registration_path(current_user.id) %>">Changer de Mot de Passe</a>
             
             <br>
             <%= submit_tag "Enregistrer", class: "mt-3 btn btn-lg btn btn-success"  %>
 
           <% end %>
 
-          <a href="<%= edit_user_registration_path(current_user.id) %>">Changer de Mot de Passe</a>
+          
 
       </div>
     </div>
