--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     <% end %>
     <%= render 'layouts/flash' %>
     <%= yield %>
-    <% if controller_name == "sessions" || controller_name == "registrations" || controller_name == "passwords" || action_name == "contact" || action_name == "about_us"%> 
+    <% if controller_name == "sessions" || controller_name == "users"|| controller_name == "registrations" || controller_name == "passwords" || action_name == "contact" || action_name == "about_us"%> 
       <%= render "layouts/footer_sticky" %>
     <% else %>
       <% unless (controller_name == "articles" && action_name == "index") || (controller_name == "searches" && action_name == "index") %>
