--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
   <%= favicon_link_tag asset_path('favicon.ico') %>
 </head>
 <body>
-<div class="row d-flex">
+
+<div class="row d-flex" id="website">
   <%= render 'layouts/navbar' %>
   <div class="col">
     <% unless controller_name == "articles" && action_name == "index" %>
@@ -19,6 +20,7 @@
       <%= render 'layouts/header_big' %>
     <% end %>
     <%= render 'layouts/flash' %>
+<%= render 'layouts/loading_animation' %>
     <%= yield %>
     <% if controller_name == "sessions" || controller_name == "registrations" || controller_name == "passwords" || action_name == "contact" || action_name == "about_us"%> 
       <%= render "layouts/footer_sticky" %>
@@ -33,6 +35,12 @@
 <style>html {
     overflow-x: hidden;
 }</style>
+
+<script> loadingWrapper = document.querySelector('.loading-wrapper');
+window.addEventListener('load', function () {spinnerWrapper.style.display = 'none';});
+</script>
+
+
 </body>
 
 </html>
